This is the first code not the final.

--- a/Pure Css Popups/htmlfile.html
+++ b/Pure Css Popups/htmlfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="cssdump.css">
+        <link rel="stylesheet" type="text/css" href="cssfile.css"> <!-- change the css file name if necessary. -->
         <title>
            This is a test html file
         </title> 
