--- a/WEB Flowchart/flowchart.html
+++ b/WEB Flowchart/flowchart.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
-<html>
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="flowchart.css">
         <title>
             BIS Plan 
         </title>
   
     </head>
-    <body>
-    <script src="C:\Users\Adithya B. Shetty\Documents\a\visual code studio\flow chart\flowchart.js"></script>
-       
+    <body class="background" >
+    <script src="flowchart.js"></script>
+    <div class="backgroundBox">
+        <div class="Round-box">
+            <font style="color: aliceblue; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;" >
+                kjsdlkaskdlslkdalksdkajkak11adadaddafaeea
+                afafafasfkaslfkaflkafma
+                adlakdmlamdalkmdaldm
+
+            </font>
+           
+        </div>
+        <p>
+            <font style="color: aliceblue;">
+                aroows will come here
+            </font>
+        </p>
+        <div class="process">
+            <p>
+                The input outtput will come here
+            </p>
+        </div>
+        <p>
+            <font style="color: aliceblue;">
+                aroows will come here
+            </font>
+        </p>
+        <div class="decisio1">
+            <p>
+                Hi 
+            </p>
+        </div>
+    </div>
     </body>
 </html>
